web interface added to webpack version. changing size, blend mode, color picker

--- a/webpack_version/index.html
+++ b/webpack_version/index.html
@@ -7,7 +7,43 @@
 
   </head>
   <body>
-    <canvas id="c" width="700" height="500"></canvas>
+    <div id="nav">
+      <button id="btn">generate new image</button>
+      <div id="colorpicker">
+        <input type="color" id="coloroverlay" name="overlay"
+               value="#fe5000" />
+      </div>
+      <div id="blend">
+        <select id="blendmode">
+          <option value="multiply">multiply</option>
+          <option value="none">none</option>
+          <option value="overlay">overlay</option>
+          <option value="screen">screen</option>
+          <option value="soft-light">soft-light</option>
+          <option value="hard-light">hard-light</option>
+          <option value="color-dodge">color-dodge</option>
+          <option value="color-burn">color-burn</option>
+          <option value="color">color</option>
+          <option value="hue">hue</option>
+          <option value="source-over">----</option>
+          <option value="darken">darken</option>
+          <option value="lighten">lighten</option>
+          <option value="difference">difference</option>
+          <option value="exclusion">exclusion</option>
+          <option value="luminosity">luminosity</option>
+          <option value="saturation">saturation</option>
+        </select>
+      </div>
+      <div id="dimensions">
+        <select id="dimension">
+          <option value="{w:300, h:250}">300x250</option>
+          <option value="{w:400, h:600}">400x600</option>
+          <option value="{w:600, h:200}">600x200</option>
+        </select>
+      </div>
+    </div>
+    <div id="gallery"></div>
       <script src="js/bundle.js"></script>
+
   </body>
 </html>
